\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 2.5.3}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Bugfix for Bugfix when returning report as GRanges with only one site}
      }
  }
}


\section{Version 2.5.2}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Bugfix when returing report as GRanges with only one site}
        \item{Bugfix: plotting venns of consensus peaksets}
      }
  }
}

\section{Version 2.5.1}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Fix buffer overrun causing segfault on MacOS}
      }
  }
}

\section{Version 2.4.0}{

Changes since least release include bug fixes and one new feature:

  \itemize{
     \item{Feature: add new plot - dba.plotVolcano}
   }
}

\section{Version 2.2.0}{

Changes since least release include bug fixes and some new features:

  \itemize{
     \item{Feature: Control which principal components are plotted using components parameter in dba.plotPCA}
     \item{Feature: Control axis range using xrange and yrange parameters in dba.plotMA}
     \item{Feature: Filtering per-contrast using filter and filterFun parameters in dba.analyze)}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.report}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.plotMA}
   }
}

\section{Version 2.0.0}{
  DiffBind has had substantial internal changes since the last release. 
  These are focused on improving memory efficiency for large experiments. 
  \itemize{
     \item{Feature changes} 
        \itemize{
           \item{Change default analysis method to DESeq2 for its more conservative normalization}
           \item{Designate DESeq method as obsolete (in favor of DESeq2); alter documentation and vignette accordingly.}
           \item{Change default FDR threshold to 0.05}